removed files and added CmdletDocumentation submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FinViz"]
 	path = FinViz
 	url = https://github.com/jerdub1993/FinViz
+[submodule "CmdletDocumentation"]
+	path = CmdletDocumentation
+	url = https://github.com/jerdub1993/CmdletDocumentation
